--- a/index.html
+++ b/index.html
@@ -53,22 +53,35 @@
             </nav>
         </div>
         <br/>
-        <main class="mdl-layout__content">
+        <main class="main mdl-layout__content">
             <!-- Square card -->
-            <div class="mdl-card mdl-shadow--2dp cardTemplate">
+            <style>
+                .mdl-card {
+                    width: auto;
+                }
+            </style>
+            <div class="mdl-card mdl-shadow--6dp cardTemplate" hidden>
+                <div class="card-last-updated" hidden></div>
                 <div class="mdl-card__title mdl-card--expand">
-                    <h2 class="mdl-card__title-text">Update</h2>
+                    <h3 class="title mdl-card__title-text"></h3>
                 </div>
-                <div class="mdl-card__supporting-text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenan convallis.
+                <div class="description mdl-card__supporting-text ">
+                    <div class="author"></div>
+                    <div class="pubDate"></div>
                 </div>
                 <div class="mdl-card__actions mdl-card--border">
-                    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                    <a class="link mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                       Read
                     </a>
                 </div>
+                <div class="mdl-card__menu">
+                    <button class="share mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+                      <i class="material-icons">share</i>
+                    </button>
+                </div>
             </div>
         </main>
+        <div class="loader mdl-spinner mdl-js-spinner"></div>
     </div>
     <script src="scripts/material.min.js"></script>
     <!-- build:js scripts/main.min.js -->
