--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Planet KDE">
     <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
+    <meta name="theme-color" content="#2196F3">
 
     <!-- Material Design icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
