Improve index template
- Added about content on left menu
- Include one more source of icons

Signed-off-by: Lays Rodrigues <laysrodriguessilva@gmail.com>

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <!-- Material Design icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://cdn.materialdesignicons.com/1.9.32/css/materialdesignicons.min.css">
     <!-- Your styles -->
     <link rel="stylesheet" href="styles/material.min.css">
 </head>
@@ -52,6 +53,30 @@
             <span class="mdl-layout-title">Planet KDE </span>
             <nav class="mdl-navigation">
             </nav>
+            <div style="margin-left: 10px;">
+                <div>
+                    <p>About</p>
+                    <p style="word-wrap:break-word;"> This Progressive Web App was made with love for KDE Community to give a better mobile experience for Planet KDE.
+                    </p>
+                    <p>Author: Lays Rodrigues</p>
+                    <p>Version: 0.1</p>
+                </div>
+                <div>
+                    <style>
+                        .space {
+                            margin-left: 10px;
+                        }
+                    </style>
+                    <row>
+                        <a class="space mdl-button mdl-js-button mdl-button--icon mdl-button--colored mdl-button--raised mdl-shadow--4dp" href="https://github.com/lays147/PWAPlanet">
+                            <i class="mdi mdi-github-circle mdi-light"></i>
+                        </a>
+                        <a class="space mdl-button mdl-js-button mdl-button--icon mdl-button--colored mdl-button--raised mdl-shadow--4dp" href="https://twitter.com/lays147">
+                            <i class="mdi mdi-twitter-circle mdi-light"></i>
+                        </a>
+                    </row>
+                </div>
+            </div>
         </div>
         <br/>
         <main class="main mdl-layout__content">
