Comment share tags
Since I didn't implement yet this feature, I will
disable the icon to show up.

Signed-off-by: Lays Rodrigues <laysrodriguessilva@gmail.com>

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                       Read
                     </a>
                 </div>
-                <div class="mdl-card__menu">
+                <!-- <div class="mdl-card__menu">
                     <button class="share mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
                       <i class="material-icons">share</i>
                     </button>
-                </div>
+                </div> -->
             </div>
         </main>
         <div class="loader mdl-spinner mdl-js-spinner"></div>
