--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="pubDate"></div>
                 </div>
                 <div class="mdl-card__actions mdl-card--border">
-                    <a class="link mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                    <a class="link mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" style="float:right;">
                       Read
                     </a>
                 </div>
