Host icons offline
I was using icons from online cdn's. But when offline
the app was broken on icons. So hosted them offline.

Signed-off-by: Lays Rodrigues <laysrodriguessilva@gmail.com>

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <meta name="theme-color" content="#2196F3">
 
     <!-- Material Design icons -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://cdn.materialdesignicons.com/1.9.32/css/materialdesignicons.min.css">
+    <link href="styles/icons/materialdesignicons/css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" />
     <!-- Your styles -->
     <link rel="stylesheet" href="styles/material.min.css">
+    <link rel="stylesheet" href="styles/icons.css">
 </head>
 
 <body>
