--- a/index.html
+++ b/index.html
@@ -2,116 +2,133 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planet KDE</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Planet KDE</title>
 
-    <!-- Disable tap highlight on IE -->
-    <meta name="msapplication-tap-highlight" content="no">
+  <!-- Disable tap highlight on IE -->
+  <meta name="msapplication-tap-highlight" content="no">
 
-    <!-- Web Application Manifest -->
-    <link rel="manifest" href="manifest.json">
+  <!-- Web Application Manifest -->
+  <link rel="manifest" href="manifest.json">
 
-    <!-- Add to homescreen for Chrome on Android -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Planet KDE">
-    <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
+  <!-- Add to homescreen for Chrome on Android -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="application-name" content="Planet KDE">
+  <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
 
-    <!-- Add to homescreen for Safari on iOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Planet KDE">
-    <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
-    <meta name="theme-color" content="#2196F3">
+  <!-- Add to homescreen for Safari on iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Planet KDE">
+  <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
+  <meta name="theme-color" content="#2196F3">
 
-    <!-- Material Design icons -->
-    <link href="styles/icons/materialdesignicons/css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" />
-    <!-- Your styles -->
-    <link rel="stylesheet" href="styles/material.min.css">
-    <link rel="stylesheet" href="styles/icons.css">
+  <!-- Material Design icons -->
+  <link href="styles/icons/materialdesignicons/css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" />
+  <!-- Your styles -->
+  <link rel="stylesheet" href="styles/material.min.css">
+  <link rel="stylesheet" href="styles/icons.css">
 </head>
 
 <body>
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-        <header class="mdl-layout__header">
-            <div class="mdl-layout__header-row">
-                <!-- Title -->
-                <span class="mdl-layout-title">Planet KDE</span>
-                <!-- Add spacer, to align navigation to the right -->
-                <div class="mdl-layout-spacer"></div>
-                <!-- Navigation -->
-                <!-- <nav class="mdl-navigation">
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header">
+      <div class="mdl-layout__header-row">
+        <!-- Title -->
+        <span class="mdl-layout-title">Planet KDE</span>
+        <!-- Add spacer, to align navigation to the right -->
+        <div class="mdl-layout-spacer"></div>
+        <!-- Navigation -->
+        <!-- <nav class="mdl-navigation">
 
               </nav> -->
-                <button id="btnRefresh" class="mdl-button mdl-js-button mdl-button--icon mdl-button--raised mdl-shadow--4dp" href="">
+        <button id="btnRefresh" class="mdl-button mdl-js-button mdl-button--icon mdl-button--raised mdl-shadow--4dp" href="">
                   <i class="material-icons" role="presentation">refresh</i></button>
-            </div>
-        </header>
-        <div class="mdl-layout__drawer">
-            <span class="mdl-layout-title">Planet KDE </span>
-            <nav class="mdl-navigation">
-            </nav>
-            <div style="margin-left: 10px;">
-                <div>
-                    <p>About</p>
-                    <p style="word-wrap:break-word;"> This Progressive Web App was made with love for KDE Community to give a better mobile experience for Planet KDE.
-                    </p>
-                    <p>Author: Lays Rodrigues</p>
-                    <p>Version: 0.1</p>
-                </div>
-                <div>
-                    <style>
-                        .space {
-                            margin-left: 10px;
-                        }
-                    </style>
-                    <row>
-                        <a class="space mdl-button mdl-js-button mdl-button--icon mdl-button--colored mdl-button--raised mdl-shadow--4dp" href="https://github.com/lays147/PWAPlanet">
+      </div>
+    </header>
+    <div class="mdl-layout__drawer">
+      <span class="mdl-layout-title">Planet KDE </span>
+      <nav class="mdl-navigation">
+      </nav>
+      <div style="margin-left: 10px;">
+        <div>
+          <p>About</p>
+          <p style="word-wrap:break-word;"> This Progressive Web App was made with love for KDE Community to give a better mobile experience for Planet KDE.
+          </p>
+          <p>Author: Lays Rodrigues</p>
+          <p>Version: 0.1</p>
+        </div>
+        <div>
+          <style>
+            .space {
+              margin-left: 10px;
+            }
+          </style>
+          <row>
+            <a class="space mdl-button mdl-js-button mdl-button--icon mdl-button--colored mdl-button--raised mdl-shadow--4dp" href="https://github.com/lays147/PWAPlanet">
                             <i class="mdi mdi-github-circle mdi-light"></i>
                         </a>
-                        <a class="space mdl-button mdl-js-button mdl-button--icon mdl-button--colored mdl-button--raised mdl-shadow--4dp" href="https://twitter.com/lays147">
+            <a class="space mdl-button mdl-js-button mdl-button--icon mdl-button--colored mdl-button--raised mdl-shadow--4dp" href="https://twitter.com/lays147">
                             <i class="mdi mdi-twitter-circle mdi-light"></i>
                         </a>
-                    </row>
-                </div>
-            </div>
+          </row>
         </div>
-        <br/>
-        <main class="main mdl-layout__content">
-            <!-- Square card -->
-            <style>
-                .mdl-card {
-                    width: auto;
-                }
-            </style>
-            <div class="mdl-card mdl-shadow--6dp cardTemplate" hidden>
-                <div class="card-last-updated" hidden></div>
-                <div class="mdl-card__title mdl-card--expand">
-                    <h3 class="title mdl-card__title-text"></h3>
-                </div>
-                <div class="description mdl-card__supporting-text ">
-                    <div class="author"></div>
-                    <div class="pubDate"></div>
-                </div>
-                <div class="mdl-card__actions mdl-card--border">
-                    <a class="link mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" style="float:right;">
+      </div>
+    </div>
+    <br/>
+    <main class="main mdl-layout__content">
+      <!-- Square card -->
+      <style>
+        .mdl-card {
+          width: auto;
+        }
+      </style>
+      <div class="mdl-card mdl-shadow--6dp cardTemplate" hidden>
+        <div class="card-last-updated" hidden></div>
+        <div class="mdl-card__title mdl-card--expand">
+          <a class="link">
+            <h3 class="title mdl-card__title-text"></h3></a>
+        </div>
+        <div class="description mdl-card__supporting-text ">
+          <div class="author"></div>
+          <div class="pubDate"></div>
+        </div>
+        <div class="mdl-card__actions mdl-card--border">
+          <a class="link mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" style="float:right;">
                       Read
                     </a>
-                </div>
-                <!-- <div class="mdl-card__menu">
+        </div>
+        <!-- <div class="mdl-card__menu">
                     <button class="share mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
                       <i class="material-icons">share</i>
                     </button>
                 </div> -->
-            </div>
-        </main>
-        <div class="loader mdl-spinner mdl-js-spinner"></div>
-    </div>
-    <script src="scripts/material.min.js"></script>
-    <!-- build:js scripts/main.min.js -->
-    <script src="scripts/main.js"></script>
+      </div>
+    </main>
+    <div class="loader mdl-spinner mdl-js-spinner"></div>
+  </div>
+  <script src="scripts/material.min.js"></script>
+  <!-- build:js scripts/main.min.js -->
+  <script src="scripts/main.js"></script>
+  <script>
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-103612095-3', 'auto');
+    ga('send', 'pageview');
+  </script>
 </body>
 
 </html>
