Add include of icons
Signed-off-by: Lays Rodrigues <laysrodriguessilva@gmail.com>

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
   <!-- Material Design icons -->
   <link href="styles/icons/materialdesignicons/css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="styles/icons/iconfontfromgoogle/material-icons.css" media="all" rel="stylesheet" type="text/css" />
   <!-- Your styles -->
   <link rel="stylesheet" href="styles/material.min.css">
   <link rel="stylesheet" href="styles/icons.css">
