--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
           <div class="pubDate"></div>
         </div>
         <div class="mdl-card__actions mdl-card--border">
+          <a class="share link mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Share</a>
           <a class="link mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" style="float:right;">
                       Read
                     </a>
@@ -130,6 +131,7 @@
     ga('create', 'UA-103612095-3', 'auto');
     ga('send', 'pageview');
   </script>
+
 </body>
 
 </html>
